fix: Add missing links

--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -56,12 +56,6 @@
                 <li><a href="{{BASE_PATH}}/usage/interpreter/execution_hooks.html">Execution Hooks (Experimental)</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>REST API</span></li>
-                <li><a href="{{BASE_PATH}}/rest-api/rest-interpreter.html">Interpreter API</a></li>
-                <li><a href="{{BASE_PATH}}/rest-api/rest-notebook.html">Notebook API</a></li>
-                <li><a href="{{BASE_PATH}}/rest-api/rest-notebookRepo.html">Notebook Repository API</a></li>
-                <li><a href="{{BASE_PATH}}/rest-api/rest-configuration.html">Configuration API</a></li>
-                <li><a href="{{BASE_PATH}}/rest-api/rest-credential.html">Credential API</a></li>
-                <li><a href="{{BASE_PATH}}/rest-api/rest-helium.html">Helium API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/interpreter.html">Interpreter API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/zeppelin_server.html">Zeppelin Server API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/notebook.html">Notebook API</a></li>
@@ -101,7 +95,7 @@
                 <li><a href="{{BASE_PATH}}/setup/storage/storage.html#notebook-storage-in-local-git-repository">Git Storage</a></li>
                 <li><a href="{{BASE_PATH}}/setup/storage/storage.html#notebook-storage-in-s3">S3 Storage</a></li>
                 <li><a href="{{BASE_PATH}}/setup/storage/storage.html#notebook-storage-in-azure">Azure Storage</a></li>
-                <li><a href="{{BASE_PATH}}/setup/storage/storage.html#storage-in-zeppelinhub">ZeppelinHub Storage</a></li>
+                <li><a href="{{BASE_PATH}}/setup/storage/storage.html#notebook-storage-in-zeppelinhub">ZeppelinHub Storage</a></li>
                 <li><a href="{{BASE_PATH}}/setup/storage/storage.html#notebook-storage-in-mongodb">MongoDB Storage</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>Operation</span></li>
