--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -81,6 +81,7 @@
                 <li><a href="{{BASE_PATH}}/setup/cluster/spark_cluster_mode.html#spark-standalone-mode">Spark Cluster Mode: Standalone</a></li>
                 <li><a href="{{BASE_PATH}}/setup/cluster/spark_cluster_mode.html#spark-on-yarn-mode">Spark Cluster Mode: YARN</a></li>
                 <li><a href="{{BASE_PATH}}/setup/cluster/spark_cluster_mode.html#spark-on-mesos-mode">Spark Cluster Mode: Mesos</a></li>
+                <li><a href="{{BASE_PATH}}/setup/cluster/zeppelin_with_flink_and_spark_cluster.html">Zeppelin with Flink, Spark Cluster</a></li>
                 <li><a href="{{BASE_PATH}}/setup/cluster/cdh.html">Zeppelin on CDH</a></li>
                 <li><a href="{{BASE_PATH}}/setup/cluster/virtual_machine.html">Zeppelin on VM: Vagrant</a></li>
                 <li role="separator" class="divider"></li>
