feat: Add docs/usage

--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -41,25 +41,26 @@
                 <li><a href="{{BASE_PATH}}/usage/dynamic_form/intro.html">What is Dynamic Form?</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>Display System</span></li>
-                <li><a href="">Text Display</a></li>
-                <li><a href="">HTML Display</a></li>
-                <li><a href="">Table Display</a></li>
-                <li><a href="{{BASE_PATH}}/displaysystem/basicdisplaysystem.html#network">Network</a></li>
-                <li><a href="">Angular Display using Backend API</a></li>
-                <li><a href="">Angular Display using Frontend API</a></li>
+                <li><a href="{{BASE_PATH}}/usage/display_system/basic.html#text">Text Display</a></li>
+                <li><a href="{{BASE_PATH}}/usage/display_system/basic.html#html">HTML Display</a></li>
+                <li><a href="{{BASE_PATH}}/usage/display_system/basic.html#table">Table Display</a></li>
+                <li><a href="{{BASE_PATH}}/usage/display_system/basic.html#network">Network</a></li>
+                <li><a href="{{BASE_PATH}}/usage/display_system/angular_backend.html">Angular Display using Backend API</a></li>
+                <li><a href="{{BASE_PATH}}/usage/display_system/angular_frontend.html">Angular Display using Frontend API</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>Interpreter</span></li>
                 <li><a href="{{BASE_PATH}}/usage/interpreter/overview.html">Overview</a></li>
                 <li><a href="{{BASE_PATH}}/usage/interpreter/user_impersonation.html">User Impersonation</a></li>
                 <li><a href="{{BASE_PATH}}/usage/interpreter/dependency_management.html">Dependency Management</a></li>
-                <li><a href="{{BASE_PATH}}/usage/interpreter/installing.html">Installing Custom Interpreters</a></li>
+                <li><a href="{{BASE_PATH}}/usage/interpreter/installation.html">Installing Interpreters</a></li>
+                <!--<li><a href="{{BASE_PATH}}/usage/interpreter/dynamic_loading.html">Dynamic Interpreter Loading (Experimental)</a></li>-->
                 <li><a href="{{BASE_PATH}}/usage/interpreter/execution_hooks.html">Execution Hooks (Experimental)</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>REST API</span></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/interpreter.html">Interpreter API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/zeppelin_server.html">Zeppelin Server API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/notebook.html">Notebook API</a></li>
-                <li><a href="{{BASE_PATH}}/usage/rest_api/notebook_repo.html">Notebook Repository API</a></li>
+                <li><a href="{{BASE_PATH}}/usage/rest_api/notebook_repository.html">Notebook Repository API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/configuration.html">Configuration API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/credential.html">Credential API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/helium.html">Helium API</a></li>
