fix: URLs in setup

--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -78,13 +78,14 @@
                 <li><a href="{{BASE_PATH}}/setup/basics/how_to_build.html">How to Build Zeppelin</a></li>
                 <li><a href="{{BASE_PATH}}/setup/basics/multi_user_support.html">Multi-user Support</a></li>
                 <li role="separator" class="divider"></li>
-                <li class="title"><span>Setup Zeppelin on Cluster</span></li>
-                <li><a href="{{BASE_PATH}}/setup/cluster/spark_cluster_mode.html#spark-standalone-mode">Spark Cluster Mode: Standalone</a></li>
-                <li><a href="{{BASE_PATH}}/setup/cluster/spark_cluster_mode.html#spark-on-yarn-mode">Spark Cluster Mode: YARN</a></li>
-                <li><a href="{{BASE_PATH}}/setup/cluster/spark_cluster_mode.html#spark-on-mesos-mode">Spark Cluster Mode: Mesos</a></li>
-                <li><a href="{{BASE_PATH}}/setup/cluster/zeppelin_with_flink_and_spark_cluster.html">Zeppelin with Flink, Spark Cluster</a></li>
-                <li><a href="{{BASE_PATH}}/setup/cluster/cdh.html">Zeppelin on CDH</a></li>
-                <li><a href="{{BASE_PATH}}/setup/cluster/virtual_machine.html">Zeppelin on VM: Vagrant</a></li>
+                <li class="title"><span>Deployment</span></li>
+                <li><a href="{{BASE_PATH}}/setup/deployment/docker.html">Docker Image for Zeppelin</a></li>
+                <li><a href="{{BASE_PATH}}/setup/deployment/spark_cluster_mode.html#spark-standalone-mode">Spark Cluster Mode: Standalone</a></li>
+                <li><a href="{{BASE_PATH}}/setup/deployment/spark_cluster_mode.html#spark-on-yarn-mode">Spark Cluster Mode: YARN</a></li>
+                <li><a href="{{BASE_PATH}}/setup/deployment/spark_cluster_mode.html#spark-on-mesos-mode">Spark Cluster Mode: Mesos</a></li>
+                <li><a href="{{BASE_PATH}}/setup/deployment/flink_and_spark_cluster.html">Zeppelin with Flink, Spark Cluster</a></li>
+                <li><a href="{{BASE_PATH}}/setup/deployment/cdh.html">Zeppelin on CDH</a></li>
+                <li><a href="{{BASE_PATH}}/setup/deployment/virtual_machine.html">Zeppelin on VM: Vagrant</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>Security</span></li>
                 <li><a href="{{BASE_PATH}}/setup/security/authentication_nginx.html">HTTP Basic Auth using NGINX</a></li>
