docs: Add empty personalized_mode.md

--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -56,6 +56,11 @@
                 <!--<li><a href="{{BASE_PATH}}/usage/interpreter/dynamic_loading.html">Dynamic Interpreter Loading (Experimental)</a></li>-->
                 <li><a href="{{BASE_PATH}}/usage/interpreter/execution_hooks.html">Execution Hooks (Experimental)</a></li>
                 <li role="separator" class="divider"></li>
+                <li class="title"><span>Other Features</span></li>
+                <li><a href="{{BASE_PATH}}/usage/other_features/publishing_paragraphs.html">Publishing Paragraphs</a></li>
+                <li><a href="{{BASE_PATH}}/usage/other_features/personalized_mode.html">Personalized Mode</a></li>
+                <li><a href="{{BASE_PATH}}/usage/other_features/customizing_homepage.html">Customizing Zeppelin Homepage</a></li>
+                <li role="separator" class="divider"></li>
                 <li class="title"><span>REST API</span></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/interpreter.html">Interpreter API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/zeppelin_server.html">Zeppelin Server API</a></li>
@@ -64,10 +69,6 @@
                 <li><a href="{{BASE_PATH}}/usage/rest_api/configuration.html">Configuration API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/credential.html">Credential API</a></li>
                 <li><a href="{{BASE_PATH}}/usage/rest_api/helium.html">Helium API</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="title"><span>Other Features</span></li>
-                <li><a href="{{BASE_PATH}}/usage/other_features/publishing_paragraphs.html">Publishing Paragraphs</a></li>
-                <li><a href="{{BASE_PATH}}/usage/other_features/customizing_homepage.html">Customizing Zeppelin Homepage</a></li>
               </ul>
             </li>
 
