docs: Add empty interpreter_binding_mode.md

--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -50,6 +50,7 @@
                 <li role="separator" class="divider"></li>
                 <li class="title"><span>Interpreter</span></li>
                 <li><a href="{{BASE_PATH}}/usage/interpreter/overview.html">Overview</a></li>
+                <li><a href="{{BASE_PATH}}/usage/interpreter/interpreter_binding_mode.html">Interpreter Binding Mode</a></li>
                 <li><a href="{{BASE_PATH}}/usage/interpreter/user_impersonation.html">User Impersonation</a></li>
                 <li><a href="{{BASE_PATH}}/usage/interpreter/dependency_management.html">Dependency Management</a></li>
                 <li><a href="{{BASE_PATH}}/usage/interpreter/installation.html">Installing Interpreters</a></li>
