[ZEPPELIN-2185] No tooltip displayed on chart type button

--- a/zeppelin-web/src/app/notebook/paragraph/result/result-chart-selector.html
+++ b/zeppelin-web/src/app/notebook/paragraph/result/result-chart-selector.html
@@ -22,7 +22,9 @@ limitations under the License.
             ng-class="{'active' : viz.id == graphMode && !config.helium.activeApp}"
             ng-click="switchViz(viz.id)"
             tooltip-placement="bottom" uib-tooltip="{{viz.name ? viz.name : ''}}"
-            ng-bind-html="viz.icon">
+            ng-bind-html="viz.icon"
+            tooltip="{{viz.name}}"
+            tooltip-placement="bottom">
     </button>
   </div>
 
