--- a/zeppelin-web/src/components/navbar/navbar.html
+++ b/zeppelin-web/src/components/navbar/navbar.html
@@ -20,12 +20,11 @@ limitations under the License.
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <!-- title -->
       <a class="navbar-brand navbar-logo" href="#/">
         <img style="margin-top: -7px;" src="assets/images/zepLogoW.png" width="50" alt="Zeppelin" />
       </a>
-      <a class="" href="#/">
-        <span class="navbar-title">Zeppelin</span>
+      <a class="navbar-brand navbar-title" href="#/">
+        <span>Zeppelin</span>
       </a>
     </div>
 
